# stepper_motor_ws

./: PACKAGE_OVERVIEW.md  README.md  README_BUS_FILE.md  README_WIRING.md  READMY_NODES.md
config/robot_control/: PD4-C6018L4204-E-08.eds  PD4-CB59M024035-E-08.eds  bus.yml  ros2_controllers.yaml
meshes/: Gear_Box_Body.3mf  Gear_Box_Body.stl  PD4-CB59-Body22.mtl  PD4-CB59M024035-E-08-Body.stl  PD4-CB59M024035-E-08.stl  PD4-CB59M024035-Shaft.stl
nanotec_pd4_can/: CMakeLists.txt  README.md  package.xml
nanotec_pd4_can/config/double-pd4/: bus.yml
nanotec_pd4_can/launch/: real_hw_launch.launch.py
nanotec_pd4_can/src/: position_tick_motor.cpp  slider.cpp  slider_button_node.cpp
stepper_motor_control/: CMakeLists.txt  package.xml
stepper_motor_control/config/robot_control/: bus.yml  bus_template.yml  ros2_controllers.yaml
stepper_motor_control/launch/: main.launch.py  nanotec_robot_control.launch.py  normal_motor_control.launch.py  visualization_motor_control.launch.py
stepper_motor_control/meshes/: Gear_Box_Shaft.3mf  Gear_Box_Shaft.stl  PD4-C6018L4204-E-08(1).dae  PD4-C6018L4204-E-08.dae  PD4-C6018L4204-E-08.stl  PD4-CB59-Body2.stl  PD4-CB59-Shaft2.stl  PPD4-CB59M024035-E-08.stl
stepper_motor_control/src/: Reset_Home_X.cpp  Reset_Home_Y.cpp  Reset_Home_Z.cpp  bus_manager.cpp  changeVel.cpp  check_motor_connection.cpp  motor_joint_states_gui.cpp  position_tick_motor.cpp  position_tick_motor_X.cpp  position_tick_motor_Y.cpp  position_tick_motor_Z.cpp  slider_button_node.cpp  torque_tick_motor_X.cpp
stepper_motor_control/urdf/robot_controller/: robot_controller.macro.xacro  robot_controller.ros2_control.xacro
urdf/robot_controller/: robot_controller.urdf.xacro
